--- a/build.xml
+++ b/build.xml
@@ -31,21 +31,21 @@
 			<property 	name="dest.cli" 						value="${dest.cli}"/>
         </subant>
 	</target>
-<!--
-	<target name="package" description="Packages all JSolr extensions for easy installation into Joomla!.">
+
+	<target name="package" description="Packages all JSpace extensions for easy installation into Joomla!.">
 		<echo message="Packaging all extensions."/>
 		
-		<mkdir dir="${package.dest}/jsolr"/>
+		<mkdir dir="${package.dest}/jspace"/>
 		
 		<subant target="package">
 			<fileset dir=".">
 				<include name="**/**/build_*.xml"/>
 			</fileset>
 			<property	name="src"			value="${src}"/>
-			<property	name="package.dest"	value="${package.dest}/jsolr"/>
+			<property	name="package.dest"	value="${package.dest}/jspace"/>
         </subant>
 	</target>
-	-->
+
 	<target name="help" description="Help documentation for this build file.">
 		<echo message="Help documentation."/>
 	</target>
