--- a/build.xml
+++ b/build.xml
@@ -35,6 +35,8 @@
 	<target name="package" description="Packages all JSpace extensions for easy installation into Joomla!.">
 		<echo message="Packaging all extensions."/>
 		
+        <delete dir="${package.dest}/jspace"/>
+        
 		<mkdir dir="${package.dest}/jspace"/>
 		
 		<subant target="package">
