--- a/libraries/JSpace/build.xml
+++ b/libraries/JSpace/build.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="JSpace" default="" basedir=".">
+    <property file="build.properties"/>
+    <property name="dest.administrator"             value="${dest}/administrator"/>
+    <property name="dest.libs"                      value="${dest}/libraries"/>
+    <property name="dest.languages"                 value="${dest}/language"/>
+    <property name="dest.administrator.languages"   value="${dest.administrator}/language"/>
 
 	<target name="clean" description="Clean JSpace library from Joomla.">
 		<delete dir="${dest.libs}/JSpace"/>
@@ -40,7 +45,6 @@
 		<echo message="Packaging JSpace library."/>
 		<zip destfile="${package.dest}/jspace.zip"
 		       basedir="${src}"
-		       update="true"
 		       excludes="build*.xml"/>
 	</target>
 </project>
