--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="JSpace Extras" default="update" basedir=".">
+<project name="JSpace" default="update" basedir=".">
     <property   file="build.properties"/>
     <property   name="dest.administrator"            value="${dest}/administrator"/>
     <property   name="dest.administrator.components" value="${dest.administrator}/components"/>
@@ -204,15 +204,48 @@
         </if>
     </target>
 
-    <target name="test" description="Runs all unit tests." depends="deploy">
+    <target name="test" description="Runs all unit tests." depends="deploy, deploy_test_data">
         <phpunit bootstrap="tests/unit/bootstrap.php">
-            <formatter type="summary" usefile="false"/>
+            <formatter type="plain" usefile="false"/>
             <batchtest>
-                <fileset dir="tests/unit/suites/plugins/jspace/s3">
-                    <include name="S3Test.php"/>
+                <fileset dir="tests/unit/suites/libraries/JSpace/Metadata">
+                    <include name="*Test.php"/>
+                </fileset>
+                <fileset dir="tests/unit/suites/plugins/jspace">
+                    <include name="harvest/*Test.php"/>
+                    <include name="localstore/*Test.php"/>
+                    <include name="weblinks/*Test.php"/>
+                    <!-- it would be good to run the individual harvesting tests but something is causing the oai tests to fail. Most probably caused by both plugins being loaded. Would be good to have better control over loading and testing plugins. -->
+                    <exclude name="oai/*Test.php"/>
+                    <exclude name="opensearch/*Test.php"/>
                 </fileset>
             </batchtest>
         </phpunit>
+    </target>
+
+    <target name="deploy_test_data">
+        <delete includeemptydirs="false">
+            <fileset dir="${dest}/../jspace" includes="**/*"/>
+        </delete>
+
+        <copy todir="${dest}/../jspace">
+            <fileset dir="tests/unit/stubs">
+                <include name="**/**"/>
+            </fileset>
+        </copy>
+
+        <move
+            file="${dest}/../jspace/opensearch/htaccess.txt"
+            tofile="${dest}/../jspace/opensearch/.htaccess"/>
+    </target>
+
+    <target name="cpd" description="Check for copying and pasting.">
+        <phpcpd minTokens="50">
+            <fileset dir="${src}">
+                <include name="**/*.php"/>
+                <exclude name="tests/**"/>
+            </fileset>
+        </phpcpd>
     </target>
 
     <target name="package" description="Packages extensions ready for installation into Joomla!.">
